# serializer version: 1
# name: test_climate_device_with_cooling_support[sensor_payload0][climate.zen_01-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'smart',
        'auto',
        'high',
        'medium',
        'low',
        'on',
        'off',
      ]),
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.zen_01',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zen-01',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': '00:24:46:00:00:11:6f:56-01-0201',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_device_with_cooling_support[sensor_payload0][climate.zen_01-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 23.2,
      'fan_mode': 'off',
      'fan_modes': list([
        'smart',
        'auto',
        'high',
        'medium',
        'low',
        'on',
        'off',
      ]),
      'friendly_name': 'Zen-01',
      'hvac_action': <HVACAction.IDLE: 'idle'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'offset': 0,
      'supported_features': <ClimateEntityFeature: 393>,
      'temperature': 22.2,
    }),
    'context': <ANY>,
    'entity_id': 'climate.zen_01',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_device_with_fan_support[sensor_payload0][climate.zen_01-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'smart',
        'auto',
        'high',
        'medium',
        'low',
        'on',
        'off',
      ]),
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.zen_01',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zen-01',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': '00:24:46:00:00:11:6f:56-01-0201',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_device_with_fan_support[sensor_payload0][climate.zen_01-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 23.2,
      'fan_mode': 'auto',
      'fan_modes': list([
        'smart',
        'auto',
        'high',
        'medium',
        'low',
        'on',
        'off',
      ]),
      'friendly_name': 'Zen-01',
      'hvac_action': <HVACAction.IDLE: 'idle'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'offset': 0,
      'supported_features': <ClimateEntityFeature: 393>,
      'temperature': 22.2,
    }),
    'context': <ANY>,
    'entity_id': 'climate.zen_01',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_device_with_preset[sensor_payload0][climate.zen_01-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'smart',
        'auto',
        'high',
        'medium',
        'low',
        'on',
        'off',
      ]),
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'preset_modes': list([
        'auto',
        'boost',
        'comfort',
        'complex',
        'eco',
        'holiday',
        'manual',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.zen_01',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zen-01',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 409>,
    'translation_key': None,
    'unique_id': '00:24:46:00:00:11:6f:56-01-0201',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_device_with_preset[sensor_payload0][climate.zen_01-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 23.2,
      'fan_mode': 'off',
      'fan_modes': list([
        'smart',
        'auto',
        'high',
        'medium',
        'low',
        'on',
        'off',
      ]),
      'friendly_name': 'Zen-01',
      'hvac_action': <HVACAction.IDLE: 'idle'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'offset': 0,
      'preset_mode': 'auto',
      'preset_modes': list([
        'auto',
        'boost',
        'comfort',
        'complex',
        'eco',
        'holiday',
        'manual',
      ]),
      'supported_features': <ClimateEntityFeature: 409>,
      'temperature': 22.2,
    }),
    'context': <ANY>,
    'entity_id': 'climate.zen_01',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_device_without_cooling_support[sensor_payload0][climate.thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.thermostat',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Thermostat',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:00-00',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_device_without_cooling_support[sensor_payload0][climate.thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 22.6,
      'friendly_name': 'Thermostat',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'offset': 10,
      'supported_features': <ClimateEntityFeature: 385>,
      'temperature': 22.0,
      'valve': 30,
    }),
    'context': <ANY>,
    'entity_id': 'climate.thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_clip_climate_device[config_entry_options0-sensor_payload0][climate.clip_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.clip_thermostat',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CLIP thermostat',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:02-00',
    'unit_of_measurement': None,
  })
# ---
# name: test_clip_climate_device[config_entry_options0-sensor_payload0][climate.clip_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 22.6,
      'friendly_name': 'CLIP thermostat',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 385>,
      'temperature': None,
      'valve': 30,
    }),
    'context': <ANY>,
    'entity_id': 'climate.clip_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_clip_climate_device[config_entry_options0-sensor_payload0][climate.thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.thermostat',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Thermostat',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:00-00',
    'unit_of_measurement': None,
  })
# ---
# name: test_clip_climate_device[config_entry_options0-sensor_payload0][climate.thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 22.6,
      'friendly_name': 'Thermostat',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'offset': 10,
      'supported_features': <ClimateEntityFeature: 385>,
      'temperature': 22.0,
      'valve': 30,
    }),
    'context': <ANY>,
    'entity_id': 'climate.thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_simple_climate_device[sensor_payload0][climate.thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.thermostat',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'thermostat',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': '14:b4:57:ff:fe:d5:4e:77-01-0201',
    'unit_of_measurement': None,
  })
# ---
# name: test_simple_climate_device[sensor_payload0][climate.thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 21.0,
      'friendly_name': 'thermostat',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'locked': True,
      'max_temp': 35,
      'min_temp': 7,
      'offset': 0,
      'supported_features': <ClimateEntityFeature: 385>,
      'temperature': 21.0,
      'valve': 24,
    }),
    'context': <ANY>,
    'entity_id': 'climate.thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
